--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </nav>
 
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
+                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current">
@@ -254,13 +254,13 @@
         </div>
     </section>
 
-    <section class="section s-portfolio mb-180">
+    <section class="section s-portfolio home mb-180">
         <div class="container">
             <div class="row m-row">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column s-portfolio__column">
                     <div>
                         <h3 class="heading decor text-bold text-xl --relative">Портфолио</h3>
-                        <h3 class="project__heading text-bold --relative">Наш последний проект</h3>
+                        <h4 class="project__heading text-bold --relative">Наш последний проект</h4>
                         <div class="project__description text-s pl-20">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -378,29 +378,30 @@
             </div>
         </div>
     -->
+
     <section class="s-news mb-180">
         <div class="container">
             <div class="row s-news__top mb-32">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex align-justify align-middle">
                     <h3 class="heading text-bold decor text-xl --relative">Последние новости </h3>
-                    <a href="" class="btn btn-more d-none d-md-inline-block">Все новости<i class="icon-right"></i> </a>
+                    <a href="" class="btn btn-primary  d-none d-md-inline-block">Все новости<i class="icon-right"></i> </a>
                 </div>
             </div>
-            <div class="row m-row mb-32">
+            <div class="row m-row blog-main">
                 <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12 column">
-                    <div class="news__img-wrap --half --relative">
-                        <img src="assets/img/news-1.png" alt="" class="news__img">
+                    <div class="article__img-wrap --half --relative">
+                        <img src="assets/img/news-1.png" alt="" class="article__img">
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
-                    <div class="news__info">
-                        <div class="news__date text-s --relative">
+                    <div class="blog-main__info">
+                        <div class="article__date text-s --relative">
                             12.05.24
                         </div>
-                        <div class="news__title text-m text-semibold">
+                        <div class="article__title text-m text-semibold">
                             Quis nostrud exercitation ullamco laboris nisi ut
                         </div>
-                        <div class="news__text --large text-s editor-style mb-32">
+                        <div class="article__text --large text-s editor-style mb-32">
                             <p>Даль журчит по всей стране и обеспечивает ее всеми необходи Даль журчит по всей стране и
                                 обеспечивает ее всеми необходи Даль журчит по всей стране и обеспечивает ее всеми
                                 необходи Даль журчит по всей стране и
@@ -408,87 +409,85 @@
                             <p>Даль журчит по всей стране и обеспечивает ее всеми необходи Даль журчит по всей стране и
                                 обеспечивает ее всеми необходи </p>
                         </div>
-                        <a href="" class="news__more">Читать полностью<i class="icon-right"></i> </a>
+                        <a href="" class="article__btn">Читать полностью<i class="icon-right"></i> </a>
                     </div>
                 </div>
 
             </div>
             <div class="row m-row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 column">
-                    <div class="news__item">
-                        <div class="news__img-wrap --relative">
-                            <img src="assets/img/news-1.png" alt="" class="news__img">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
+                    <div class="article__item">
+                        <div class="article__img-wrap --relative">
+                            <img src="assets/img/news-1.png" alt="" class="article__img">
                         </div>
-                        <div class="news__info">
-                            <div class="news__date text-s --relative">
+                        <div class="article__info">
+                            <div class="article__date text-s --relative">
                                 12.05.24
                             </div>
-                            <div class="news__title text-m text-semibold">
+                            <div class="article__title text-m text-semibold">
                                 Quis nostrud exercitation ullamco laboris nisi ut
                             </div>
-                            <div class="news__text text-s">
+                            <div class="article__text text-s">
                                 Даль журчит по всей стране и обеспечивает ее всеми необходи...
                             </div>
-                            <a href="" class="news__more">Читать полностью<i class="icon-right"></i> </a>
+                            <a href="" class="article__btn">Читать полностью<i class="icon-right"></i> </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 column">
-                    <div class="news__item">
-                        <div class="news__img-wrap  --relative">
-                            <img src="assets/img/news-2.png" alt="" class="news__img">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
+                    <div class="article__item">
+                        <div class="article__img-wrap --relative">
+                            <img src="assets/img/news-2.png" alt="" class="article__img">
                         </div>
-                        <div class="news__info">
-                            <div class="news__date text-s --relative">
+                        <div class="article__info">
+                            <div class="article__date text-s --relative">
                                 12.05.24
                             </div>
-                            <div class="news__title text-m text-semibold">
+                            <div class="article__title text-m text-semibold">
                                 Quis nostrud exercitation ullamco laboris nisi ut
                             </div>
-                            <div class="news__text text-s">
+                            <div class="article__text text-s">
                                 Даль журчит по всей стране и обеспечивает ее всеми необходи...
                             </div>
-                            <a href="" class="news__more">Читать полностью<i class="icon-right"></i> </a>
+                            <a href="" class="article__btn">Читать полностью<i class="icon-right"></i> </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 column">
-                    <div class="news__item">
-                        <div class="news__img-wrap  --relative">
-                            <img src="assets/img/news-3.png" alt="" class="news__img">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
+                    <div class="article__item">
+                        <div class="article__img-wrap --relative">
+                            <img src="assets/img/news-3.png" alt="" class="article__img">
                         </div>
-                        <div class="news__info">
-                            <div class="news__date text-s --relative">
+                        <div class="article__info">
+                            <div class="article__date text-s --relative">
                                 12.05.24
                             </div>
-                            <div class="news__title text-m text-semibold">
+                            <div class="article__title text-m text-semibold">
                                 Quis nostrud exercitation ullamco laboris nisi ut
                             </div>
-                            <div class="news__text text-s">
-                                Даль журчит по всей стране и обеспечивает ее всеми необходиДаль журчит по всей стране и
-                                обеспечивает ее всеми необходи
+                            <div class="article__text text-s">
+                                Даль журчит по всей стране и обеспечивает ее всеми необходи...
                             </div>
-                            <a href="" class="news__more">Читать полностью<i class="icon-right"></i> </a>
+                            <a href="" class="article__btn">Читать полностью<i class="icon-right"></i> </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 column">
-                    <div class="news__item">
-                        <div class="news__img-wrap  --relative">
-                            <img src="assets/img/about.png" alt="" class="news__img">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-12 column">
+                    <div class="article__item">
+                        <div class="article__img-wrap --relative">
+                            <img src="assets/img/news-1.png" alt="" class="article__img">
                         </div>
-                        <div class="news__info">
-                            <div class="news__date text-s --relative">
+                        <div class="article__info">
+                            <div class="article__date text-s --relative">
                                 12.05.24
                             </div>
-                            <div class="news__title text-m text-semibold">
+                            <div class="article__title text-m text-semibold">
                                 Quis nostrud exercitation ullamco laboris nisi ut
                             </div>
-                            <div class="news__text text-s">
-                                Даль журчит по всей стране и обеспечивает ее всеми необходи Даль журчит по всей стране и
-                                обеспечивает ее всеми необходи
+                            <div class="article__text text-s">
+                                Даль журчит по всей стране и обеспечивает ее всеми необходи...
                             </div>
-                            <a href="" class="news__more">Читать полностью<i class="icon-right"></i> </a>
+                            <a href="" class="article__btn">Читать полностью<i class="icon-right"></i> </a>
                         </div>
                     </div>
                 </div>
