--- a/404.html
+++ b/404.html
@@ -48,27 +48,27 @@
                 <nav class="navbar__menu">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
-                            <a href="">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
-                            <a href=""> Портфолио</a>
+                            <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Новости</a>
+                            <a href="blog.html">Новости</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
 
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
+                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
-                    <div class="lang__current">
-                        <a href="/ru/">RU</a><!--поточна мова-->
+                    <div class="lang__current d-flex align-middle">
+                        <a href="/ru/">RU</a> <i class="icon-ar-bottom"></i> <!--поточна мова-->
                     </div>
 
                     <ul class="lang">
@@ -86,21 +86,22 @@
 
 <main class="main ">
 
-    <section class="s-other --relative">
+    <section class="s-other error --relative">
 
 
         <div class="container">
             <div class="row s-other__inner d-flex align-middle align-center">
+
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 --relative">
+                    <img src="assets/img/404.svg" alt="404" class="s-other__img">
+                    <img src="assets/img/decor.svg" alt="decor" class="decor">
+                </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h1 class="heading text-xl mb-32 text-bold">Упс! Что-то пошло не так</h1>
                     <div class="description text-l mb-32">Эта страница не найдена или временно не доступна. Попробуйте
                         позже.
                     </div>
                     <a href="" class="btn btn-primary">Вернуться назад</a>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 --relative">
-                    <img src="assets/img/404.svg" alt="404" class="s-other__img">
-                    <img src="assets/img/decor.svg" alt="decor" class="decor">
                 </div>
             </div>
         </div>
