--- a/contacts.html
+++ b/contacts.html
@@ -46,23 +46,23 @@
                 <nav class="navbar__menu">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
-                            <a href="">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
-                            <a href=""> Портфолио</a>
+                            <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Новости</a>
+                            <a href="blog.html">Новости</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
 
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
+                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current d-flex align-middle">
@@ -87,13 +87,20 @@
 <main class="main ">
     <div class="container">
         <div class="row">
-            <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-xs-12">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="kama_breadcrumbs">
-                    <p id="breadcrumbs"><span><span><a href="https://www.silk.lviv.ua/">Головна</a></span> &nbsp;/&nbsp; <span
-                            class="breadcrumb_last" aria-current="page">Контакти</span></span></p></div>
+                    <span>
+                        <a href="">
+                            <span>Главная</span>
+                        </a>
+                    </span>
+                    <span class="kb_sep"><i class="icon-ar-forward"></i></span>
+                    <span class="kb_title">Контакти</span>
+                </div>
             </div>
         </div>
     </div>
+
     <section class="s-contacts">
         <div class="container overlap">
 
