--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,10 @@
             <div class="navbar">
                 <nav class="navbar__menu">
                     <ul class="menu">
-                        <li class="menu-item  current-menu-item">
+                        <li class="menu-item ">
                             <a href="about.html">О нас</a>
                         </li>
-                        <li class="menu-item">
+                        <li class="menu-item current-menu-item">
                             <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
@@ -65,7 +65,7 @@
                 </nav>
 
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
+                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current d-flex align-middle">
@@ -86,15 +86,23 @@
 </header>
 
 <main class="main ">
+
     <div class="container">
         <div class="row">
-            <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-xs-12">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="kama_breadcrumbs">
-                    <p id="breadcrumbs"><span><span><a href="https://www.silk.lviv.ua/">Головна</a></span> &nbsp;/&nbsp; <span
-                            class="breadcrumb_last" aria-current="page">Портфоліо</span></span></p></div>
+                    <span>
+                        <a href="">
+                            <span>Главная</span>
+                        </a>
+                    </span>
+                    <span class="kb_sep"><i class="icon-ar-forward"></i></span>
+                    <span class="kb_title">Портфоліо</span>
+                </div>
             </div>
         </div>
     </div>
+
     <section class="section s-portfolio">
         <div class="container">
             <div class="row s-portfolio__top mb-32">
