--- a/thanks.html
+++ b/thanks.html
@@ -48,27 +48,28 @@
                 <nav class="navbar__menu">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
-                            <a href="">О нас</a>
+                            <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
-                            <a href=""> Портфолио</a>
+                            <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Новости</a>
+                            <a href="blog.html">Новости</a>
                         </li>
 
                         <li class="menu-item">
-                            <a href="">Контакты</a>
+                            <a href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
 
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-bold">+0 000 000 00 00</a>
+                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00
+                    00</a>
 
                 <div class="lang__wrap --relative">
-                    <div class="lang__current">
-                        <a href="/ru/">RU</a><!--поточна мова-->
+                    <div class="lang__current d-flex align-middle">
+                        <a href="/ru/">RU</a> <i class="icon-ar-bottom"></i> <!--поточна мова-->
                     </div>
 
                     <ul class="lang">
@@ -86,24 +87,26 @@
 
 <main class="main ">
 
-    <section class="s-other --relative">
-
-
+    <section class="s-other thanks --relative">
         <div class="container">
             <div class="row s-other__inner d-flex align-middle align-center">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h1 class="heading text-xl mb-32 text-bold">Спасибо!</h1>
-                    <div class="description text-l mb-32">Ваше сообщение отправлено. Мы свяжемся с Вами ближайшее время.</div>
-                    <a href="" class="btn btn-primary">Вернуться назад</a>
-                </div>
+
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 --relative">
-                    <img src="assets/img/thanks.svg" alt="thanks" class="s-other__img">
-                    <img src="assets/img/decor.svg" alt="decor" class="decor">
+                    <img src="assets/img/thanks.svg" alt="thanks" class="img">
+                    <img src="assets/img/decor.svg" alt="decor" class="decor-bg">
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <h1 class="heading decor text-xl mb-32 text-bold --relative">Спасибо!</h1>
+
+                    <div class="description text-l mb-32">Ваше сообщение отправлено. Мы свяжемся с Вами ближайшее
+                        время.
+                    </div>
+
                 </div>
             </div>
         </div>
     </section>
-1
+
 </main>
 
 <footer class="footer">
@@ -181,44 +184,6 @@
 <script src="./assets/js/jquery-3.7.0.min.js"></script>
 <script src="assets/js/swiper-bundle.min.js"></script>
 <script src="assets/js/js_app.min.js"></script>
-<!--
-<script>
-    var galleryThumbs = new Swiper(".gallery-thumbs", {
-        centeredSlides: true,
-        centeredSlidesBounds: true,
-        slidesPerView: 4,
-        watchOverflow: true,
-        watchSlidesVisibility: true,
-        watchSlidesProgress: true,
-        direction: 'vertical'
-    });
-
-    var galleryMain = new Swiper(".gallery-main", {
-        watchOverflow: true,
-        watchSlidesVisibility: true,
-        watchSlidesProgress: true,
-        preventInteractionOnTransition: true,
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-        effect: 'fade',
-        fadeEffect: {
-            crossFade: true
-        },
-        thumbs: {
-            swiper: galleryThumbs
-        }
-    });
-
-    galleryMain.on('slideChangeTransitionStart', function () {
-        galleryThumbs.slideTo(galleryMain.activeIndex);
-    });
-
-    galleryThumbs.on('transitionStart', function () {
-        galleryMain.slideTo(galleryThumbs.activeIndex);
-    });
-</script>-->
 
 <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key="
         type="text/javascript"></script>
