--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
 
 <div class="body-padding"></div>
 
-<header class="header bg">
+<header class="header">
     <div class=" container">
         <div class="header__inner d-flex align-middle align-justify">
             <a href="index.html" class="logo__wrap">
