--- a/404.html
+++ b/404.html
@@ -93,8 +93,8 @@
             <div class="row s-other__inner d-flex align-middle align-center">
 
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 --relative">
-                    <img src="assets/img/404.svg" alt="404" class="s-other__img">
-                    <img src="assets/img/decor.svg" alt="decor" class="decor">
+                    <img src="assets/img/404.svg" alt="404" class="img">
+                    <img src="assets/img/decor.svg" alt="decor" class="decor-bg">
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h1 class="heading text-xl mb-32 text-bold">Упс! Что-то пошло не так</h1>
