--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,8 @@
 </div>
 <div class="body-padding"></div>
 
-<header class="header ">
+<header class="header">
+    <!-- додати ці класи ===  js-header transparent ==== тільки на головну сторінку-->
     <div class=" container">
         <div class="header__inner d-flex align-middle align-justify">
             <a href="index.html" class="logo__wrap">
@@ -51,7 +52,7 @@
                         <li class="menu-item ">
                             <a href="about.html">О нас</a>
                         </li>
-                        <li class="menu-item current-menu-item">
+                        <li class="menu-item">
                             <a href="portfolio.html"> Портфолио</a>
                         </li>
                         <li class="menu-item">
@@ -64,8 +65,23 @@
                     </ul>
                 </nav>
 
+                <div class="d-flex align-justify align-middle header__contacts">
+                    <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00
+                        00</a>
+                    <ul class="social d-flex d-md-none">
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/instagram.svg" alt="instagram" class="social__img">
+                            </a>
+                        </li>
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/whatsapp.svg" alt="whatsapp" class="social__img">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current d-flex align-middle">
