--- a/404.html
+++ b/404.html
@@ -29,7 +29,8 @@
     <span></span>
 </div>
 
-<header class="header ">
+<header class="header">
+    <!-- додати ці класи ===  js-header transparent ==== тільки на головну сторінку-->
     <div class=" container">
         <div class="header__inner d-flex align-middle align-justify">
             <a href="index.html" class="logo__wrap">
@@ -47,7 +48,7 @@
             <div class="navbar">
                 <nav class="navbar__menu">
                     <ul class="menu">
-                        <li class="menu-item  current-menu-item">
+                        <li class="menu-item ">
                             <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
@@ -63,8 +64,23 @@
                     </ul>
                 </nav>
 
+                <div class="d-flex align-justify align-middle header__contacts">
+                    <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00
+                        00</a>
+                    <ul class="social d-flex d-md-none">
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/instagram.svg" alt="instagram" class="social__img">
+                            </a>
+                        </li>
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/whatsapp.svg" alt="whatsapp" class="social__img">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00 00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current d-flex align-middle">
@@ -97,11 +113,14 @@
                     <img src="assets/img/decor.svg" alt="decor" class="decor-bg">
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h1 class="heading text-xl mb-32 text-bold">Упс! Что-то пошло не так</h1>
-                    <div class="description text-l mb-32">Эта страница не найдена или временно не доступна. Попробуйте
-                        позже.
+                    <div class="s-other__content">
+                        <h1 class="heading decor no-margin text-xl mb-32 text-bold --relative">Упс! Что-то пошло не так</h1>
+                        <div class="description text-l mb-32">Эта страница не найдена или временно не доступна.
+                            Попробуйте
+                            позже.
+                        </div>
+                        <a href="" class="btn btn-primary">Вернуться назад</a>
                     </div>
-                    <a href="" class="btn btn-primary">Вернуться назад</a>
                 </div>
             </div>
         </div>
