--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
 <div class="body-padding"></div>
 
 <header class="header">
+    <!-- додати ці класи ===  js-header transparent ==== тільки на головну сторінку-->
     <div class=" container">
         <div class="header__inner d-flex align-middle align-justify">
             <a href="index.html" class="logo__wrap">
@@ -49,13 +50,13 @@
             <div class="navbar">
                 <nav class="navbar__menu">
                     <ul class="menu">
-                        <li class="menu-item">
+                        <li class="menu-item ">
                             <a href="about.html">О нас</a>
                         </li>
                         <li class="menu-item">
                             <a href="portfolio.html"> Портфолио</a>
                         </li>
-                        <li class="menu-item current-menu-item">
+                        <li class="menu-item">
                             <a href="blog.html">Новости</a>
                         </li>
 
@@ -65,9 +66,23 @@
                     </ul>
                 </nav>
 
+                <div class="d-flex align-justify align-middle header__contacts">
+                    <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00
+                        00</a>
+                    <ul class="social d-flex d-md-none">
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/instagram.svg" alt="instagram" class="social__img">
+                            </a>
+                        </li>
+                        <li class="social__item d-flex align-center align-middle">
+                            <a href="">
+                                <img src="assets/img/whatsapp.svg" alt="whatsapp" class="social__img">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-                <a href="tel:000000000000" target="_blank" class="navbar__phone text-s text-semibold">+0 000 000 00
-                    00</a>
 
                 <div class="lang__wrap --relative">
                     <div class="lang__current d-flex align-middle">
