--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
     </div>
 </header>
 
-<main class="main ">
+<main class="main overlap">
     <div class="container">
         <div class="row">
             <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-xs-12">
@@ -332,7 +332,7 @@
     </section>
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
