--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@
     </div>
 </header>
 
-<main class="main ">
+<main class="main overlap">
 
     <section class="s-other error --relative">
 
@@ -114,7 +114,8 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="s-other__content">
-                        <h1 class="heading decor no-margin text-xl mb-32 text-bold --relative">Упс! Что-то пошло не так</h1>
+                        <h1 class="heading decor no-margin text-xl mb-32 text-bold --relative">Упс! Что-то пошло не
+                            так</h1>
                         <div class="description text-l mb-32">Эта страница не найдена или временно не доступна.
                             Попробуйте
                             позже.
@@ -128,7 +129,7 @@
 
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
