--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 </div>
 
-<div class="body-grid d-none">
+<div class="body-grid">
     <span></span>
     <span></span>
     <span></span>
@@ -102,7 +102,7 @@
 </header>
 
 
-<main class="main ">
+<main class="main overlap">
 
     <section class="s-introduce mb-180 --relative">
         <div class="container --relative">
@@ -260,6 +260,51 @@
                                     <img src="assets/img/news-3.png" alt="" class="history-img">
                                 </div>
                             </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-1.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-2.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-3.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-1.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-2.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-3.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-1.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-2.png" alt="" class="history-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history-img__wrap">
+                                    <img src="assets/img/news-3.png" alt="" class="history-img">
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-button__wrap d-flex align-left">
                             <div class="swiper-button-prev d-flex align-left align-middle text-s text-medium">
@@ -273,7 +318,7 @@
                     </div>
 
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column --relative">
                     <div class="heading decor text-bold text-xl mb-32 --relative d-none d-md-block">
                         Наша история
                     </div>
@@ -315,21 +360,119 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2006</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2009</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2024</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2006</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2009</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2024</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2006</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2009</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="history__item">
+                                    <div class="history__year text-m text-bold">2024</div>
+                                    <div class="history__name text-s text-bold">Lorem ipsum dolor sit amet</div>
+                                    <div class="description editor-style">
+                                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                            quis nostrud exercitatio...</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
-
-                   <!-- <div class="d-flex align-end align-left fraction__wrap">
-                        <div class="custom-current fraction__current text-bold"></div>
-                        <div class="custom-total fraction__total --relative"></div>
-                    </div>-->
-
+                    <div class="swiper-pagination d-flex align-left align-end"></div>
                 </div>
             </div>
-
-
-
-
         </div>
     </section>
 
@@ -641,16 +784,16 @@
 
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
-            <div class="row align-justify">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+            <div class="row m-row align-justify">
+                <div class="column col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <a href="index.html" class="logo__wrap">
                         <img src="assets/img/logo.svg" alt="Klan" class="logo">
                     </a>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 footer-item ">
+                <div class="column col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 footer-item ">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
                             <a href="about.html">О нас</a>
@@ -666,7 +809,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12  footer-item --relative">
+                <div class="column col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12  footer-item --relative">
                     <ul class="social__list d-flex align-middle align-right">
                         <li class="social__item align-middle">
                             <a href="" class="social__link">
@@ -835,7 +978,19 @@
             el: '.s-history .swiper-pagination',
             type: 'fraction',
             formatFractionCurrent: function (number) {
-                return '0' + number;
+                let pageNumberCurrent = number;
+                if (pageNumberCurrent < 10) {
+                    pageNumberCurrent = '0' + number;
+                }
+                return pageNumberCurrent;
+            },
+
+            renderBullet: function (index, className) {
+                let pageNumber = index + 1;
+                if (pageNumber < 10) {
+                    pageNumber = '0' + pageNumber;
+                }
+                return '<span class="' + className + '">' + pageNumber + '</span>';
             }
         },
         initialSlide: 1,
