--- a/blog-inner.html
+++ b/blog-inner.html
@@ -102,7 +102,7 @@
     </div>
 </header>
 
-<main class="main">
+<main class="main overlap">
 
     <div class="container">
         <div class="row">
@@ -604,7 +604,7 @@
     </section>
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
