--- a/contacts.html
+++ b/contacts.html
@@ -100,7 +100,7 @@
 
 <div class="body-padding"></div>
 
-<main class="main ">
+<main class="main overlap">
     <div class="container">
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -192,7 +192,7 @@
 
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
