--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </div>
 
-<div class="body-grid d-none">
+<div class="body-grid ">
     <span></span>
     <span></span>
     <span></span>
@@ -100,14 +100,14 @@
     </div>
 </header>
 
-<main class="main ">
+<main class="main overlap">
 
     <section class="s-main mb-180 swiper-entry">
         <div class="container --relative">
             <div class="row --relative s-main__row">
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-xs-12 ">
                     <div class="social__wrap">
-                        <div class="social__title"><span>Мы в соц. сетях test</span></div>
+                        <div class="social__title"><span>Мы в соц. сетях</span></div>
                         <ul class="social">
                             <li class="social__item d-flex align-center align-middle">
                                 <a href="">
@@ -133,6 +133,8 @@
                                         <div class="bg desktop bgLoaded"
 
                                              style=" background-image: url('assets/img/news-1.png');"></div>
+
+                                        <img src="assets/img/decor-main.svg" alt="Klan" class="decor">
                                         <div class="main-slide__info">
                                             <img src="assets/img/logo-large.svg" alt="Klan" class="main-slide__logo">
                                             <h1 class="main-slide__heading text-xl text-bold">это девелоперская
@@ -148,6 +150,7 @@
 
                                 <div class="swiper-slide">
                                     <div class="main-slide">
+                                        <img src="assets/img/decor-main.svg" alt="Klan" class="decor">
                                         <div class="bg desktop bgLoaded"
                                              style=" background-image: url('assets/img/news-2.png');"></div>
                                         <div class="main-slide__info">
@@ -162,6 +165,8 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="main-slide">
+                                        <img src="assets/img/decor-main.svg" alt="Klan" class="decor">
+
                                         <div class="bg desktop bgLoaded"
 
                                              style=" background-image: url('assets/img/news-1.png');"></div>
@@ -218,17 +223,17 @@
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
                     <div class="benefit__item align-middle --relative">
-                        <img src="assets/img/benefit-2.svg" alt="" class="benefit__icon">
+                        <img src="assets/img/benefit-3.svg" alt="" class="benefit__icon">
                         <div class="benefit__text text-semibold text-m">
-                            Люди прежде всего
+                            Гармоничный
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
                     <div class="benefit__item align-middle --relative">
-                        <img src="assets/img/benefit-3.svg" alt="" class="benefit__icon">
+                        <img src="assets/img/benefit-2.svg" alt="" class="benefit__icon">
                         <div class="benefit__text text-semibold text-m">
-                            Люди прежде всего
+                            Культурно-ориентированный
                         </div>
                     </div>
                 </div>
@@ -579,16 +584,16 @@
 
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
-            <div class="row align-justify">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+            <div class="row align-justify m-row">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column">
                     <a href="index.html" class="logo__wrap">
                         <img src="assets/img/logo.svg" alt="Klan" class="logo">
                     </a>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 footer-item ">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 footer-item column">
                     <ul class="menu">
                         <li class="menu-item  current-menu-item">
                             <a href="about.html">О нас</a>
@@ -604,7 +609,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12  footer-item --relative">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12  footer-item --relative column">
                     <ul class="social__list d-flex align-middle align-right">
                         <li class="social__item align-middle">
                             <a href="" class="social__link">
