--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
     </div>
 </header>
 
-<main class="main ">
+<main class="main overlap">
 
     <div class="container">
         <div class="row">
@@ -258,7 +258,7 @@
     </section>
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
