--- a/thanks.html
+++ b/thanks.html
@@ -100,7 +100,7 @@
     </div>
 </header>
 
-<main class="main ">
+<main class="main overlap">
 
     <section class="s-other thanks --relative">
         <div class="container">
@@ -125,7 +125,7 @@
 
 </main>
 
-<footer class="footer">
+<footer class="footer overlap">
     <div class="footer__main">
         <div class="container">
             <div class="row align-justify">
