--- a/blog-inner.html
+++ b/blog-inner.html
@@ -439,7 +439,7 @@
         </div>
     </section>
 
-    <section class="s-download">
+    <section class="s-download mb-20 ">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 s-download__inner d-flex align-middle  align-justify">
@@ -528,7 +528,41 @@
         </div>
     </section>
 
-    <section class="s-cta">
+
+    <section class="s-project">
+        <div class="container">
+            <div class="row m-row">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column s-portfolio__column">
+                    <div>
+                        <h3 class="heading text-bold decor --relative">Наш новый проект</h3>
+                        <div class="description text-s pl-20 editor-style">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                                in
+                                voluptate velit esse cillum.</p>
+                            <p>Purus in mollis nunc sed id semper. Vitae purus faucibus ornare suspendisse sed nisi
+                                lacus
+                                sed. Egestas erat imperdiet sed euismod nisi porta lorem. Morbi tincidunt augue interdum
+                                velit euismod in pellentesque. Phasellus egestas tellus rutrum tellus pellentesque eu
+                                tincidunt tortor aliquam. Diam volutpat commodo sed egestas. Amet commodo nulla facilisi
+                                nullam vehicula.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12 column">
+                    <div class="gallery__wrap">
+                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
+                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
+                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="s-cta mb-20">
         <div class="container">
             <div class="row m-row s-cta__top">
                 <div class="col-xl-8 col-lg-9 col-md-10 col-sm-12 col-xs-12 column d-flex align-left align-middle">
@@ -569,39 +603,6 @@
         </div>
     </section>
 
-    <section class="s-project">
-        <div class="container">
-            <div class="row m-row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column s-portfolio__column">
-                    <div>
-                        <h3 class="heading text-bold decor --relative">Наш новый проект</h3>
-                        <div class="description text-s pl-20 editor-style">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                                in
-                                voluptate velit esse cillum.</p>
-                            <p>Purus in mollis nunc sed id semper. Vitae purus faucibus ornare suspendisse sed nisi
-                                lacus
-                                sed. Egestas erat imperdiet sed euismod nisi porta lorem. Morbi tincidunt augue interdum
-                                velit euismod in pellentesque. Phasellus egestas tellus rutrum tellus pellentesque eu
-                                tincidunt tortor aliquam. Diam volutpat commodo sed egestas. Amet commodo nulla facilisi
-                                nullam vehicula.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12 column">
-                    <div class="gallery__wrap">
-                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
-                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
-                        <div class="gallery__item"><img src="assets/img/news-1.png" alt="" class="gallery__icon"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 </main>
 
 <footer class="footer overlap">
