--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
 
                         <div>
                             <h3 class="heading decor no-margin text-bold text-xl --relative">Портфолио</h3>
-                            <h4 class="project__heading text-m text-bold --relative">Наш последний проект</h4>
+                            <h4 class="project__heading text-l text-bold --relative">Наш последний проект</h4>
+                            <h4 class="project__sub-heading text-bold --relative">Lorem ipsum dolor sit amet</h4>
                             <div class="project__description text-s">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
