--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row s-main__row">
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-xs-12 ">
                     <div class="social__wrap">
-                        <div class="social__title"><span>Мы в соц. сетях</span></div>
+                        <div class="social__title"><span>Ми в соціальних мережах</span></div>
                         <ul class="social">
                             <li class="social__item d-flex align-center align-middle">
                                 <a href="">
