--- a/blog-inner.html
+++ b/blog-inner.html
@@ -21,7 +21,7 @@
 
 </div>
 
-<div class="body-grid d-none">
+<div class="body-grid ">
     <span></span>
     <span></span>
     <span></span>
@@ -529,7 +529,7 @@
     </section>
 
 
-    <section class="s-project">
+    <section class="s-project mb-20">
         <div class="container">
             <div class="row m-row">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column s-portfolio__column">
