--- a/about.html
+++ b/about.html
@@ -600,12 +600,12 @@
 
     <section class="s-experience mb-180">
         <div class="container">
-            <div class="row">
+            <div class="row m-row">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12 column s-experience__inner">
                     <div class=" ">
                         <h3 class="heading decor text-xl text-bold --relative mb-32">Наш опыт</h3>
                         <div class="title text-semibold text-s pl-20"> Lorem ipsum dolor sit amet</div>
-                        <div class="description pl-20">
+                        <div class="description text-s pl-20">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio...
                         </div>
