--- a/about.html
+++ b/about.html
@@ -486,7 +486,7 @@
             <div class="row ">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="swiper-container"
-                         data-options='{"slidesPerView":1, "direction": "horizontal" ,"spaceBetween": 0, "speed": 1200, "centeredSlides": false, "loop": true, "breakpoints": {"375": {"slidesPerView": 2,"spaceBetween": 0, "autoHeight": false}, "992": {"slidesPerView": 3, "spaceBetween": 0}, "1200": {"slidesPerView": 4, "spaceBetween": 0}}}'>
+                         data-options='{"slidesPerView":1, "direction": "horizontal" ,"spaceBetween": 0, "speed": 1200, "centeredSlides": false, "loop": true, "breakpoints": {"375": {"slidesPerView": 2,"spaceBetween": 0, "autoHeight": false}, "992": {"slidesPerView": 3, "spaceBetween": 0}, "1200": {"slidesPerView": "auto", "spaceBetween": 0}}}'>
 
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
